--- a/restler-core/pom.xml
+++ b/restler-core/pom.xml
@@ -34,4 +34,12 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-core</artifactId>
+            <version>2.3.2.RELEASE</version>
+        </dependency>
+    </dependencies>
+
 </project>
