--- a/pom.xml
+++ b/pom.xml
@@ -295,7 +295,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-core</artifactId>
+            <version>2.3.2.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
